# nebelung

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: run_checks.yml  run_checks_and_tests.yml
example/: README.md  __main__.py
example/workflows/: hello_world.json  hello_world.wdl  other_tasks.wdl
nebelung/: __init__.py  terra_workflow.py  terra_workspace.py  types.py  utils.py  wdl.py
src/nebelung/: __init__.py  terra_workspace.py  types.py  utils.py
tests/nebelung/: test_utils.py
tests/nebelung/data/: workflow_inputs.json
