[tool.poetry]
name = "nebelung"
version = "2.13.1"
description = "Firecloud API Wrapper"
authors = ["Devin McCabe <dmccabe@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/nebelung"
keywords = ["terra", "firecloud"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=1.5"
pygithub = ">=2.3"
pydantic = ">=2.8"
pandera = {extras = ["strategies"], version = ">=0.20"}
pd-flatten = ">=0.1"
firecloud-api-cds = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pyright = "^1.1.407"
pandas-stubs = "^2.2.3.250527"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "I",  # isort formatting
]

[tool.pyright]
venvPath = "."
venv = ".venv"
