[project]
name = "nebelung"
version = "2.14.1"
description = "Firecloud API Wrapper"
authors = [{ name = "Devin McCabe", email = "dmccabe@broadinstitute.org" }]
requires-python = ">=3.11"
readme = "README.md"
keywords = [
    "terra",
    "firecloud",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pandas>=1.5",
    "pygithub>=2.3",
    "pydantic>=2.8",
    "pandera[strategies]>=0.20",
    "pd-flatten>=0.1",
    "firecloud-api-cds>=0.2.1,<0.3",
    "batch-evenly>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/broadinstitute/nebelung"
Repository = "https://github.com/broadinstitute/nebelung"
Issues = "https://github.com/broadinstitute/nebelung/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.1,<0.13",
    "pyright>=1.1.409,<2",
    "pandas-stubs>=2.2.3.250527,<3",
    "pytest>=8.4.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nebelung"]

[tool.ruff]
lint.select = [
    "I",  # isort formatting
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
